--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -2,6 +2,15 @@
 {% load static %}
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S7770C7N17"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S7770C7N17');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Voice Mirror</title> 
@@ -24,10 +33,10 @@
             <a class="nav-link" href="/">首頁</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="characters">排行榜</a>
+            <a class="nav-link" href="characters">音色轉換器</a>
           </li>
         </ul>
-        <button class="btn btn-primary" type="button">登入</button>
+	<! -- <button class="btn btn-primary" type="button">登入</button> -- >
       </div>
     </div>
   </nav>
@@ -51,7 +60,7 @@
   </div>
 
   <footer class="container-fluid fixed-bottom bg-dark text-center text-white p-2 mt-5">
-    Copyright © 2023 VoiceMirror Inc. 
+    Copyright © 2023 VoiceMirror 
   </footer>
   <!-- Link to Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
