--- a/app/templates/app/transform.html
+++ b/app/templates/app/transform.html
@@ -2,6 +2,15 @@
 {% load static %}
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S7770C7N17"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S7770C7N17');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Voice Mirror</title>
@@ -25,10 +34,10 @@
             <a class="nav-link" href="/">首頁</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/characters">排行榜</a>                                           
+            <a class="nav-link" href="/characters">音色轉換器</a>                                           
           </li>
         </ul>
-        <button class="btn btn-primary" type="button">登入</button>
+	<!-- <button class="btn btn-primary" type="button">登入</button> -->
       </div>
     </div>
   </nav>
@@ -49,7 +58,11 @@
         <div class="upload-area">
           <label for="music-file" class="upload-label">
             <i class="upload-icon fas fa-cloud-upload-alt"></i>
-            <div class="upload-text" id="file-name">拖放檔案至此或點擊上傳</div>
+            <div class="upload-text" id="file-name">
+		    點擊上傳一段聲音檔
+		    </br>
+		    盡量是乾淨人聲, 長度要小於40秒喔
+	    </div>
           </label>
           <input type="file" id="music-file" accept=".mp3,.wav,.ogg" style="display: none;">
         </div>
@@ -58,10 +71,10 @@
           <div class="progress-text" id="progress-text">0%</div>
         </div>
         <div class="pitch-slider">
-          <div class="current-pitch">調整音高: -12</div>
+          <div class="current-pitch">調整音高: 0</div>
           <div class="slider-container">
             <span class="slider-label min-label">-12</span>
-            <input type="range" id="transpose" name="pitch" min="-12" max="12" value="-12" step="1">
+            <input type="range" id="transpose" name="pitch" min="-12" max="12" value="0" step="1">
             <span class="slider-label max-label">12</span>
           </div>
         </div>
@@ -81,7 +94,7 @@
     </div>
   </div>
   <footer class="container-fluid fixed-bottom bg-dark text-center text-white p-2 mt-5">
-    Copyright © 2023 VoiceMirror Inc. 
+    Copyright © 2023 VoiceMirror 
   </footer>
   <!-- Link to Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -197,9 +210,9 @@
             audio.addEventListener('loadedmetadata', () => {
               const duration = audio.duration;
               console.log(duration)
-              if (duration > 31) {
+              if (duration > 40) {
                   $('#convert-button').prop('disabled', true);
-                  window.alert("要上傳小於30秒的聲音檔喔")
+                  window.alert("要上傳小於40秒的聲音檔喔")
                   $('.upload-area').hide();
                   $('.pitch-slider').hide();
                   $('#convert-button').hide();
