--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -13,7 +13,8 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voice Mirror</title> 
+  <meta name="description" content="Use this free AI voice generator to transform your voice into the distinctive voice of a singer or celebrity you admire" />
+  <title>Free AI Voice Generator | Voice Mirror</title> 
   <!-- Link to Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <!-- Your custom CSS -->
@@ -22,7 +23,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar">
-    <div class="container">
+    <div style="font-family:Arial Black;" class="container">
       <a class="navbar-brand" href="#">Voice Mirror</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">首頁</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="characters">音色轉換器</a>
+            <a class="nav-link" href="characters">Voice Cloning</a>
           </li>
         </ul>
 	<! -- <button class="btn btn-primary" type="button">登入</button> -- >
@@ -41,10 +42,10 @@
     </div>
   </nav>
   <div id="home" class="container home-section">
-    <h1>AI音色轉換工具</h1>
-    <h2>上傳你的聲音，將它轉換為各種歌手名人的聲音吧</h2>
+    <h1 style="font-family:Arial Black;" >Free AI Voice Generator Online</h1>
+    <h2 style="font-family:Arial Black;">Use this free AI voice generator to transform your voice into the distinctive voice of a singer or celebrity you admire</p>
     </br>
-    <a href="characters" class="btn btn-primary">免費使用</a>
+    <a href="characters" class="btn btn-primary">Get Started for Free</a>
   </div>
 
   <div id="about" class="container about-section">
