--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -43,7 +43,7 @@
   </nav>
   <div id="home" class="container home-section">
     <h1 style="font-family:Arial Black;" >Free AI Voice Generator Online</h1>
-    <h2 style="font-family:Arial Black;">Use this free AI voice generator to transform your voice into the distinctive voice of a singer or celebrity you admire</p>
+    <h2 style="font-family:Arial Black;">Upload your audio and transform it into the voice of your favorite celebrity or singer.</p>
     </br>
     <a href="characters" class="btn btn-primary">Get Started for Free</a>
   </div>
