--- a/app/templates/app/transform.html
+++ b/app/templates/app/transform.html
@@ -11,6 +11,11 @@
 
   gtag('config', 'G-S7770C7N17');
 </script>
+
+<!-- Google Adsense Verification -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183236515527045"
+     crossorigin="anonymous"></script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Voice Mirror</title>
